--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.38.4",
+    "@unocss/nuxt": "^0.50.7",
     "eslint": "^8.38.0",
     "gitmoji-cli": "^8.0.0",
     "nuxt": "^3.3.3",
