--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@formkit/themes": "next",
     "@types/node": "^18",
     "@unocss/nuxt": "^0.51.6",
+    "@unocss/reset": "^0.51.8",
     "eslint": "^8.39.0",
     "gitmoji-cli": "^8.1.1",
     "nuxt": "^3.4.2",
